y overflow hidden issue and height fixed in advisor profile

--- a/src/styles/AdvisorProfile.css
+++ b/src/styles/AdvisorProfile.css
@@ -11,8 +11,9 @@
     justify-content: center;
     align-items: top;
     padding-top: 15vh;
-    height: 100vh;
-    width: 100vw;
+    height: fit-content;
+    width: 100%;
+    padding-bottom: 50px;
 }
 
 .APleft {
